# claude-history

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  flake.nix  justfile
.claude/skills/claude-history-search/: SKILL.md
.github/workflows/: nix.yml  release.yml
scripts/: install.sh  update-flake.sh
src/: claude.rs  cli.rs  config.rs  debug_log.rs  display.rs  error.rs  main.rs  semantic_cli.rs  semantic_poc.rs  text_match.rs  tool_format.rs  update.rs
src/agent/: mod.rs  protocol.rs  refs.rs  retrieval.rs  search.rs  test_support.rs  transcript.rs
src/history/: cache.rs  mod.rs  parser.rs  rename.rs
src/search/: evidence.rs  lexical.rs  literal.rs  mod.rs  mode.rs  query.rs  test_fixtures.rs
src/semantic/: cache.rs  chunk.rs  embed.rs  evidence.rs  fastembed.rs  filter.rs  index.rs  mod.rs  output.rs  rank.rs  test_fixtures.rs  types.rs
src/tui/: app.rs  command_tags.rs  export.rs  mod.rs  runtime.rs  search.rs  semantic_worker.rs  theme.rs  ui.rs  viewer.rs
src/tui/app/: dialog_state.rs  input_controller.rs  interaction_tests.rs  list_state.rs  search_state.rs  semantic_test_helpers.rs  tests.rs  types.rs  view_state.rs
src/tui/viewer/: commands.rs  context.rs  entry.rs  ledger.rs  markdown.rs  mod.rs  output.rs  style.rs  summary.rs  tests.rs  timing.rs  tools.rs
tests/: agent_docs.rs  cargo_manifest.rs
